<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent" android:background="?attr/colorSurface">
        <LinearLayout android:id="@+id/header" android:layout_width="0dp" android:layout_height="64dp" android:gravity="center_vertical" android:orientation="horizontal" android:paddingHorizontal="@dimen/spacing_small" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <ImageView android:id="@+id/back" android:layout_width="48dp" android:layout_height="48dp" android:background="@drawable/ripple_color_grey_oval" android:contentDescription="@string/back" android:padding="@dimen/spacing_small" android:src="@drawable/ic_back_24x24"/>
            <TextView style="@style/text_title_2" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/account"/>
        </LinearLayout>
        <androidx.core.widget.NestedScrollView android:layout_width="0dp" android:layout_height="0dp" android:fillViewport="true" android:padding="@dimen/spacing_medium" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/header">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
                <TextView android:id="@+id/name" style="@style/text_title_2" android:layout_width="match_parent" android:layout_height="wrap_content"/>
                <TextView android:id="@+id/identity" style="@style/text_body_secondary" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_tiny"/>
                <TextView style="@style/text_caption_secondary" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_large" android:text="@string/last_reported_balance"/>
                <TextView android:id="@+id/balance" style="@style/text_title_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_tiny"/>
                <TextView android:id="@+id/balance_age" style="@style/text_caption_secondary" android:layout_width="match_parent" android:layout_height="wrap_content"/>
                <Button android:id="@+id/refresh" style="@style/AppTextButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_medium" android:text="@string/refresh_reported_balance" android:visibility="gone"/>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
                    <Button android:id="@+id/rename" style="@style/AppTextButton" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/rename_account"/>
                    <Button android:id="@+id/merge" style="@style/AppTextButton" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/merge_account"/>
                    <Button android:id="@+id/hide" style="@style/AppTextButton" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/hide_account"/>
                </LinearLayout>
                <TextView android:id="@+id/totals" style="@style/text_body_secondary" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_medium"/>
                <TextView style="@style/text_body_bold" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_large" android:text="@string/transactions"/>
                <TextView style="@style/text_caption_secondary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/long_press_assign"/>
                <androidx.recyclerview.widget.RecyclerView android:id="@+id/transactions" android:layout_width="match_parent" android:layout_height="wrap_content" android:nestedScrollingEnabled="false"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
