<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="64dp"
            android:paddingHorizontal="@dimen/spacing_small"
            android:paddingVertical="@dimen/spacing_x_small"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back"
                android:layout_width="@dimen/spacing_x_large"
                android:layout_height="@dimen/spacing_x_large"
                android:background="@drawable/ripple_color_grey_oval"
                android:contentDescription="@string/back"
                android:padding="@dimen/spacing_x_small"
                android:src="@drawable/ic_back_24x24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/text_title_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:text="@string/transactions"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/back"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_container"
            style="@style/AppTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_x_medium"
            android:layout_marginTop="@dimen/spacing_x_small"
            android:hint="@string/search_transactions"
            app:startIconDrawable="@drawable/ic_search_24x24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search"
                style="@style/AppTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <HorizontalScrollView
            android:id="@+id/filter_scroll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:fillViewport="false"
            android:overScrollMode="never"
            android:paddingHorizontal="@dimen/spacing_x_medium"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_container">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/filters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/spacing_x_small"
                app:chipSpacingHorizontal="@dimen/spacing_x_small"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_all"
                    style="@style/AppChoiceChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/all" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_review"
                    style="@style/AppChoiceChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/needs_review" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_expense"
                    style="@style/AppChoiceChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expense" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_income"
                    style="@style/AppChoiceChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingHorizontal="@dimen/spacing_tiny"
            android:paddingTop="@dimen/spacing_tiny"
            android:paddingBottom="@dimen/spacing_x_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_scroll"
            tools:listitem="@layout/item_transaction" />

        <LinearLayout
            android:id="@+id/empty_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_scroll">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/analysis_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_x_medium"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorSize="@dimen/spacing_xx_large" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/empty"
                style="@style/text_body_secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_transactions"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
